<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/fragment_favorite_bank_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_favorite_bank_tv_title"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/fragment_favorite_mainTextSize" />

        <Spinner
            android:id="@+id/fragment_sp_favorite_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_favorite_bank_tv_currency"
                    android:textColor="@color/colorMainText"
                    android:textSize="@dimen/fragment_favorite_mainTextSize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_favorite_bank_tv_ask"
                    android:textColor="@color/colorMainText"
                    android:textSize="@dimen/fragment_favorite_mainTextSize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_favorite_bank_tv_bid"
                    android:textColor="@color/colorMainText"
                    android:textSize="@dimen/fragment_favorite_mainTextSize" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/fragment_favorite_bank_sp_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/fragment_favorite_bank_tv_currency" />

                <TextView
                    android:id="@+id/fragment_favorite_bank_tv_ask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/fragment_favorite_bank_tv_ask"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/fragment_favorite_bank_tv_bid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/fragment_favorite_bank_tv_bid"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/fragment_favorite_bank_sp_currencyMinMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!--<android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_rv_favorite_banks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />-->

</LinearLayout>